SPARK-57362: Prevent doc content from overlapping left navigation

--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -13,6 +13,10 @@ body {
   padding-top: var(--navbar-height);
 }
 
+body.has-left-nav {
+  overflow-x: hidden;
+}
+
 a {
   background: transparent;
   color: #2fa4e7;
@@ -834,6 +838,7 @@ blockquote {
   line-height: 1.6;
   padding-left: 30px;
   min-height: 100vh;
+  overflow-x: auto;
 }
 
 .left-menu-wrapper {
@@ -850,6 +855,8 @@ blockquote {
   overflow-y: scroll;
   padding-right: 20px;
   font-size: 0.9em !important;
+  z-index: 2;
+  background-color: #FFF;
 }
 
 .left-menu h3 {
